# poetry-cicd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yaml
poetry_cicd/: __init__.py  contact.py  create_app.py
poetry_cicd/templates/: edit.html  healthcheck.html  index.html  layout.html  new_contact.html  show.html
tests/: fixtures.py  test_healthcheck.py  test_sample.py  test_show.py
